when we click on the checkbox that will only appear in the fragment to change the first and last name, we will read the data and store it in the changeName method. When the data is changed, they are immediately written to the database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="register_hint">-----------------</string>
+    <string name="settings_hint_input_name">Name</string>
+    <string name="settings_hint_input_surname">Surname</string>
+    <string name="name_is_empty">имя не может быть пустым</string>
 </resources>
