--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="settings_hint_input_surname">Surname</string>
     <string name="name_is_empty">имя не может быть пустым</string>
     <string name="settings_input_username">settings input username</string>
+    <string name="bio">bio</string>
 </resources>
