--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">telegram</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="settings_default_username">Yura Petrov</string>
     <string name="settings_default_status">в сети</string>
@@ -12,25 +11,17 @@
     <string name="settings_label_bio">Напишите немного о себе</string>
     <string name="settings_menu_change_name">Изменить имя</string>
     <string name="settings_menu_exit">Выход</string>
-    <string name="title_activity_register">RegisterActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
     <string name="cd_register_image">register_image</string>
     <string name="register_text_enter_code">Введите код</string>
     <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на ваш телефон</string>
     <string name="register_hint_default_code">- - - - - -</string>
     <string name="register_title_your_phone">Ваш телефон</string>
     <string name="register_toast_enter_phone">Введите номер телефона</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="register_hint">-----------------</string>
-    <string name="settings_hint_input_name">Name</string>
-    <string name="settings_hint_input_surname">Surname</string>
-    <string name="name_is_empty">имя не может быть пустым</string>
-    <string name="settings_input_username">settings input username</string>
-    <string name="bio">bio</string>
+    <string name="register_phone_hint">-------------</string>
+    <string name="settings_hint_input_name">Имя</string>
+    <string name="settings_hint_input_surname">Фамилия</string>
+    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
+    <string name="toast_data_update">Данные обновлены</string>
+    <string name="settings_hint_input_username">username</string>
+    <string name="settings_input_bio">bio</string>
 </resources>
